--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ ReactVideoChatContext/node_modules
 ReactVideoChatShortcuts/node_modules
 ReduxTutorialLama/node_modules
 RegisterUponActivationEmail/node_modules
+PassportJsLoginLama/node_modules
