added passport backend

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ ReactVideoChatShortcuts/node_modules
 ReduxTutorialLama/node_modules
 RegisterUponActivationEmail/node_modules
 PassportJsLoginLama/node_modules
+PassportJsLoginLama/backend/node_modules
