--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ ReduxTutorialLama/node_modules
 RegisterUponActivationEmail/node_modules
 PassportJsLoginLama/node_modules
 PassportJsLoginLama/backend/node_modules
+TailwindCSSIntro/node_modules
