--- a/PassportJsLoginLama/backend/package.json
+++ b/PassportJsLoginLama/backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cookie-session": "^1.4.0",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.15",
     "passport": "^0.5.0",
