started face-detection app

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ PassportJsLoginLama/backend/node_modules
 PassportJsLoginLama/backend/.env
 TailwindCSSIntro/node_modules
 ReactCopyToClipboard/node_modules
+FaceDetectionPlusTagFriendsApp/node_modules
