finished styled website

--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,3 @@
 node_modules
-AngularCrashCourse/node_modules
-BetterFacebookMessenger/node_modules
-Bootstrap5TutorialTraversy/node_modules
-BuyAndSellYourOwnAPI/node_modules
-ChatWithRoomsTraversy/node_modules
-JsonWebTokenTutorialLama/node_modules
-LamaInitialAdminDashboard/node_modules
-LineChartWithRecharts/node_modules
-MaterialUITutorialLama/node_modules
-MDBProjects/node_modules
-MulterForImagesTutorialTraversy/node_modules
-MulterForVideoTutorial/node_modules
-NextCrashCourse/node_modules
-NotificationsWithSocketIO/node_modules
-PasswordResetTutorialLama/node_modules
-ReactVideoChatContext/node_modules
-ReactVideoChatShortcuts/node_modules
-ReduxTutorialLama/node_modules
-RegisterUponActivationEmail/node_modules
-PassportJsLoginLama/node_modules
-PassportJsLoginLama/backend/node_modules
 PassportJsLoginLama/backend/.env
-TailwindCSSIntro/node_modules
-ReactCopyToClipboard/node_modules
-FaceDetectionPlusTagFriendsApp/node_modules
+NodePaypalAPIFazt/.env
